# DUM-E

./: .gitignore  README.md  requirements.txt
ros2_ws/: BRD_DUM-E.md  ros2_ws.repos
ros2_ws/src/dum_e_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/dum_e_bringup/launch/: dum_e_bringup.launch.py
ros2_ws/src/dum_e_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/dum_e_interfaces/msg/: SkillCommand.msg
ros2_ws/src/dum_e_interfaces/srv/: GetObjectPose.srv  RunSkill.srv
ros2_ws/src/dum_e_motion/: package.xml  setup.cfg  setup.py
ros2_ws/src/dum_e_motion/dum_e_motion/: monitoring.py  motion_context.py  skill_manager_node.py
ros2_ws/src/dum_e_perception/: debug_yolo_stream.py  package.xml  setup.cfg  setup.py
ros2_ws/src/dum_e_perception/dum_e_perception/: perception_node.py  pose_estimator.py  yolo_detector.py
ros2_ws/src/dum_e_utils/: package.xml  setup.cfg  setup.py
ros2_ws/src/dum_e_utils/dum_e_utils/: realsense.py
ros2_ws/src/motion/motion/: __init__.py  detect_motion_node.py  fetch_object_node.py
ros2_ws/src/perception/: package.xml  setup.py
ros2_ws/src/perception/config/: T_gripper2camera.npy
ros2_ws/src/perception/perception/: manual_designation.py  pick.py  vision_stream.py
ros2_ws/src/perception_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/perception_interfaces/srv/: PickObject.srv
ros2_ws/src/utils/: package.xml  setup.py
ros2_ws/src/utils/utils/: gripper_controller.py  realsense.py
services/: requirements.txt
services/audio_io/app/: config.py  jarvis_assistant.py  main.py  mic.py  stt.py  tts.py  tts_base.py  wakeword.py
services/audio_io/app/models/: dummy.ppn  jarvis.ppn
services/common/: env_loader.py
services/dum_e_webcam/webcam/: main.py  situation_prompt.txt
services/llm_agent/: ros_bridge.py
services/llm_agent/app/: llm.py  skill_planner.py
services/llm_agent/tests/: test_run_skill.py
(+11 files in other folders)
