<?xml version="1.0"?>
<package format="3">
  <name>dum_e_bringup</name>
  <version>0.0.0</version>
  <description>DUM-E bringup package (Doosan + RealSense + perception + motion)</description>

  <maintainer email="inseonyu7@gmail.com">rokey</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>dsr_bringup2</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>dum_e_perception</exec_depend>
  <exec_depend>dum_e_motion</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
